<resources>
    <string name="app_name" translatable="false">Etisbew Communicator</string>
    <string name="sensor_id">Sensor ID</string>
    <string name="sensor_description">Sensor description</string>
    <string name="sensor_latitude">Latitude</string>
    <string name="sensor_longitude">Longitude</string>
    <string name="sensor_temperature">Temperature</string>
    <string name="sensor_relative_humidity">Relative Humidity</string>
    <string name="create_sensor">Create Sensor</string>
    <string name="start_generateing_readings">Start Generating Readings</string>
    <string name="stop_generateing_readings">Stop Generating Readings</string>
</resources>
